# Frappe-attachments-s3

./: pyproject.toml
frappe_s3_attachment/: __init__.py  controller.py  hooks.py
frappe_s3_attachment/overrides/: file.py
frappe_s3_attachment/tests/: test_controller.py
